infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: pubg
---
apiVersion: v1
kind: Namespace
metadata:
 name: monitoring
