infra/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pubg-app
  labels:
    app: pubg-app
spec:
  selector:
    matchLabels:
      app: pubg-app
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
      labels:
        app: pubg-app
    spec:
      serviceAccount: pubg
      containers:
        - name: pubg-leaderboard
          image: "pubg-scraper:latest"
          imagePullPolicy: Never
          args:
            - "uvicorn"
            - "pubg.app:app"
            - "--host=0.0.0.0"
            - "--port=8080"
          volumeMounts:
            - name: secret-volume
              mountPath: /etc/secrets/
              readOnly: true
          resources:
            requests:
              cpu: 500m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
      volumes:
        - name: secret-volume
          secret:
            secretName: pubg-scraper-secret
---
apiVersion: v1
kind: Service
metadata:
  name: pubg
spec:
  type: NodePort
  selector:
    app: pubg-app
  ports:
    - port: 8080
      targetPort: 8080
# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: pubg-app
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: pubg-app
#   minReplicas: 1
#   maxReplicas: 10
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 80
