infra/monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  ports:
  - name: web
    port: 9090
    targetPort: 80
  selector:
    app.kubernetes.io/name: prometheus
  sessionAffinity: ClientIP
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-ext
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '3000'
spec:
  selector: 
    app.kubernetes.io/name: grafana
  type: NodePort  
  ports:
    - name: web
      port: 3000
      targetPort: 80
      nodePort: 32000
